--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 
 <!--Added background video-->
-<video autoplay muted loop id="theCoffee">
-    <source src="img/coffee_video.mp4" type="video/mp4">
-</video>
+<!--<video autoplay muted loop id="theCoffee">-->
+<!--    <source src="img/coffee_video.mp4" type="video/mp4">-->
+<!--</video>-->
 
     <h1>Coffee!</h1>
     <div>
